Applied max height of 100vh and max width of 100vw to body element to constrain all visible elements and prevent scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,36 @@
 /*font-family: 'Audiowide', cursive;
 font-family: 'Montserrat', sans-serif;*/
 
+/*Color Palette - not assigned, for reference only*/
+.colorPalette {
+    color: #616161; /*Grey*/
+    color: #8e8e8e; /*Light Grey*/
+    color: #373737; /*Dark Grey*/
+    color: #0099cc; /*Blue*/
+    color: #5dcaff; /*Light Blue*/
+    color: #006b9b; /*Dark Blue*/
+    color: #56b714; /*Green*/
+    color: #8bea4f; /*Light Green*/
+    color: #148600; /*Dark Green*/
+    color: #fcdd00; /*Yellow*/
+    color: #ffff53; /*Light Yellow*/
+    color: #c4ac00; /*Dark Yellow*/
+    color: #f5f5f5; /*Light Text*/
+    color: #000000; /*Default Text*/
+    color: #ad001f; /*Warning Text*/
+
+}
+
+
+/*Fonts and Text Sizing*/
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.65rem;
+}
+
+.lightText {
+    color: #f5f5f5;
+}
 
 
 /*Padding and Margins*/
@@ -10,7 +40,15 @@ font-family: 'Montserrat', sans-serif;*/
     padding: 0;
 }
 
+.no-margin {
+    margin: 0;
+}
+
 /*Sizing*/
+body {
+    max-height: 100vh;
+    max-width: 100vw;
+}
 #logo img {
     width: 10rem;
 }
@@ -24,7 +62,6 @@ footer {
 }
 
 /*Backgrounds*/
-
 .bgGlassSmoke {
     background-image: linear-gradient(135deg, rgba(142,142,142,0.25), rgba(55,55,55,0.5), rgba(142,142,142,0.5));
     border-width: 0.5px; 
